--- a/dotfiles/.i3/config
+++ b/dotfiles/.i3/config
@@ -275,6 +275,9 @@ bindsym $mod+9 exec --no-startup-id blurlock
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
+exec --no-startup-id ~/apps/.dropbox-dist/./dropboxd start -i
+exec --no-startup-id ~/apps/Telegram/./Telegram -startintray
+exec --no-startup-id wavebox
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
