Fix hotkeys in gnome.conf

--- a/ubuntu-dotfiles/.config/dconf/gnome.conf
+++ b/ubuntu-dotfiles/.config/dconf/gnome.conf
@@ -1,3 +1,6 @@
+[settings-daemon/plugins/media-keys]
+custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/']
+
 [settings-daemon/plugins/media-keys/custom-keybindings/custom0]
 binding='<Super>d'
 command='rofi -show run'
@@ -50,3 +53,4 @@ color-shading-type='solid'
 primary-color='#000000'
 picture-options='zoom'
 secondary-color='#000000'
+show-desktop-icons=false
