Improve config files

--- a/ubuntu-dotfiles/.config/dconf/gnome.conf
+++ b/ubuntu-dotfiles/.config/dconf/gnome.conf
@@ -21,8 +21,32 @@ binding='<Super>F2'
 command='firefox'
 name='Firefox'
 
+[shell]
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'ubuntu-dock@ubuntu.com', 'Vitals@CoreCoding.com']
+favorite-apps=['firefox.desktop', 'nemo.desktop', 'code.desktop', 'wavebox.desktop', 'telegramdesktop.desktop', 'steam.desktop']
+
+[shell/extensions/dash-to-dock]
+customize-alphas=true
+extend-height=false
+dock-fixed=false
+max-alpha=0.90000000000000002
+custom-background-color=true
+min-alpha=0.0
+running-indicator-style='SEGMENTED'
+background-color='#000000'
+
 [shell/extensions/user-theme]
 name='Flat-Remix-Dark'
+
+[shell/extensions/vitals]
+hot-sensors=['_memory_usage_', '_processor_average_', '__temperature_avg__', '_network_wlp2s0_rx_', '_network_wlp2s0_tx_']
+hide-zeros=false
+position-in-panel=1
+alphabetize=true
+use-higher-precision=false
+show-voltage=false
+show-battery=false
+show-storage=false
 
 [desktop/interface]
 clock-show-date=true
@@ -34,11 +58,17 @@ gtk-theme='Flat-Remix-GTK-Blue-Dark-Solid'
 icon-theme='Flat-Remix-Blue-Dark'
 
 [desktop/screensaver]
-picture-uri='file:///home/arthurazs/Pictures/wallpaper/alena-aenami-coldredlight.jpg'
 color-shading-type='solid'
 primary-color='#000000'
 picture-options='zoom'
 secondary-color='#000000'
+
+[desktop/peripherals/touchpad]
+natural-scroll=true
+send-events='enabled'
+
+[desktop/peripherals/mouse]
+natural-scroll=false
 
 [desktop/wm/preferences]
 button-layout='appmenu:minimize,maximize,close'
@@ -48,7 +78,6 @@ close=['<Shift><Super>q']
 show-desktop=['<Primary><Super>d', '<Primary><Alt>d']
 
 [desktop/background]
-picture-uri='file:///home/arthurazs/Pictures/Wallpapers/alena-aenami-stay-1k.jpg'
 color-shading-type='solid'
 primary-color='#000000'
 picture-options='zoom'
