--- a/ubuntu-dotfiles/.config/dconf/tilix.conf
+++ b/ubuntu-dotfiles/.config/dconf/tilix.conf
@@ -4,14 +4,18 @@ default='39a1e237-1f11-48b8-b280-77560202fb25'
 
 [profiles/39a1e237-1f11-48b8-b280-77560202fb25]
 foreground-color='#F8F8F2'
+rewrap-on-resize=true
 visible-name='Default'
 palette=['#272822', '#F92672', '#A6E22E', '#F4BF75', '#66D9EF', '#AE81FF', '#A1EFE4', '#F8F8F2', '#75715E', '#F92672', '#A6E22E', '#F4BF75', '#66D9EF', '#AE81FF', '#A1EFE4', '#F9F8F5']
+bold-is-bright=true
 badge-color-set=false
 default-size-columns=80
 show-scrollbar=true
 scroll-on-output=false
 cursor-colors-set=false
 highlight-colors-set=false
+use-system-font=true
+font='Fira Code weight=450 11'
 use-theme-colors=false
 bold-color-set=false
 background-color='#272822'
