Update dotfiles for ubuntu 20.04

--- a/ubuntu-dotfiles/.config/dconf/gnome.conf
+++ b/ubuntu-dotfiles/.config/dconf/gnome.conf
@@ -21,47 +21,66 @@ binding='<Super>F2'
 command='firefox'
 name='Firefox'
 
+[settings-daemon/plugins/color]
+night-light-enabled=true
+night-light-schedule-automatic=false
+night-light-schedule-to=8.0
+
+[settings-daemon/plugins/power]
+sleep-inactive-ac-timeout=3600
+sleep-inactive-ac-type='suspend'
+sleep-inactive-battery-timeout=1800
+
 [shell]
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'ubuntu-dock@ubuntu.com', 'Vitals@CoreCoding.com']
-favorite-apps=['firefox.desktop', 'nemo.desktop', 'code.desktop', 'wavebox.desktop', 'telegramdesktop.desktop', 'steam.desktop']
+enabled-extensions=['Vitals@CoreCoding.com', 'desktop-icons@csoriano', 'user-theme@gnome-shell-extensions.gcampax.github.com']
+favorite-apps=['firefox.desktop', 'nemo.desktop', 'code.desktop', 'telegramdesktop.desktop']
 
 [shell/extensions/dash-to-dock]
-customize-alphas=true
-extend-height=false
-dock-fixed=false
-max-alpha=0.90000000000000002
+background-color='#000000'
 custom-background-color=true
+customize-alphas=true
+dock-fixed=false
+extend-height=false
+max-alpha=0.90000000000000002
 min-alpha=0.0
 running-indicator-style='SEGMENTED'
-background-color='#000000'
+
+[extensions/desktop-icons]
+show-home=false
+show-trash=false
 
 [shell/extensions/user-theme]
-name='Flat-Remix-Dark'
+name='Yaru-dark'
 
 [shell/extensions/vitals]
-hot-sensors=['_memory_usage_', '_processor_average_', '__temperature_avg__', '_network_wlp2s0_rx_', '_network_wlp2s0_tx_']
-hide-zeros=false
-position-in-panel=1
 alphabetize=true
-use-higher-precision=false
-show-voltage=false
+hide-zeros=false
+hot-sensors=['_memory_usage_', '_processor_average_', '__temperature_avg__', '__network-download_max__', '__network-upload_max__', '_network_wifi_link quality_']
+position-in-panel=1
 show-battery=false
 show-storage=false
+show-voltage=false
+use-higher-precision=false
 
 [desktop/interface]
 clock-show-date=true
-show-battery-percentage=true
-gtk-im-module='gtk-im-context-simple'
 clock-show-seconds=false
-cursor-theme='DMZ-White'
-gtk-theme='Flat-Remix-GTK-Blue-Dark-Solid'
-icon-theme='Flat-Remix-Blue-Dark'
+clock-show-weekday=false
+gtk-im-module='gtk-im-context-simple'
+gtk-theme='Yaru-dark'
+show-battery-percentage=true
 
 [desktop/screensaver]
 color-shading-type='solid'
-primary-color='#000000'
+lock-delay=uint32 30
+lock-enabled=true
 picture-options='zoom'
+primary-color='#000000'
 secondary-color='#000000'
+ubuntu-lock-on-suspend=true
+
+[desktop/notifications]
+show-in-lock-screen=true
 
 [desktop/peripherals/touchpad]
 natural-scroll=true
@@ -83,3 +102,9 @@ primary-color='#000000'
 picture-options='zoom'
 secondary-color='#000000'
 show-desktop-icons=false
+
+[gedit/preferences/editor]
+scheme='oblivion'
+
+[system/location]
+enabled=false
