--- a/ubuntu-dotfiles/.config/dconf/gnome.conf
+++ b/ubuntu-dotfiles/.config/dconf/gnome.conf
@@ -95,6 +95,10 @@ button-layout='appmenu:minimize,maximize,close'
 [desktop/wm/keybindings]
 close=['<Shift><Super>q']
 show-desktop=['<Primary><Super>d', '<Primary><Alt>d']
+switch-windows=['<Super>Tab']
+switch-windows-backward=['<Shift><Super>Tab']
+switch-applications=['<Alt>Tab']
+switch-applications-backward=['<Shift><Alt>Tab']
 
 [desktop/background]
 color-shading-type='solid'
